test/libsolidity/syntaxTests/nameAndTypeResolution/290_varM_disqualified_as_keyword_1.sol
contract test {
    function f() public {
        uintM something = 3;
    }
}
// ----
// DeclarationError: (50-55): Identifier not found or not unique.
